<resources>
    <string name="app_name">GAYATHRISRIKANTI_COMP304_sec001_LAB3</string>
    <string name="select_an_exercise_and_have_fun" />
    <string name="line_thickness" />
    <string name="arrow_keys" />
    <string name="GAYATHRI_301181090_Exercise1" />
    <string name="green">green</string>
    <string name="start" />
    <string name="stop" />
    <string name="togglebutton">ToggleButton</string>
    <string name="start5">START</string>
    <string name="stop6">STOP</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="add_attribute">Add Attribute</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>

</resources>