<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".Exercise1"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_thickness"
                    android:textColor="#625682"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <Spinner
                    android:id="@+id/spnrThick"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpUsage,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Clear"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Line Color:"
                    android:textStyle="bold"
                    android:textColor="#625682"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="HardcodedText" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <RadioButton
                        android:id="@+id/rBtnRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Red"
                        android:textStyle="bold"
                        android:textColor="#0000FF"
                        android:textSize="19sp"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:id="@+id/rBtnYellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/green"
                        android:textStyle="bold"
                        android:textColor="#0000FF"
                        android:textSize="19sp"/>

                    <RadioButton
                        android:id="@+id/rBtnCyan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Yellow"
                        android:textStyle="bold"
                        android:textColor="#0000FF"
                        android:textSize="19sp"
                        tools:ignore="HardcodedText" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txtVCoord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#F6D7D7"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_keys"
                    android:textColor="#625682"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnRight"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginBottom="76dp"
                        android:background="@drawable/arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnDown"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="36dp"
                        android:background="@drawable/arrow_down"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Button
                        android:id="@+id/btnUp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="116dp"
                        android:background="@drawable/arrow_up"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnLeft"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="76dp"
                        android:background="@drawable/arrow_left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="431dp"
            android:background="#000000"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GAYATHRI_301181090_Exercise1"
            android:textColor="#616161" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>